# colette

./: .gitignore  CONTRIBUTING.md  COPYING  Dockerfile  README.md  cog.yaml  docker-compose.yml  env_template  predict.py  pyproject.toml  pytest.ini  replicate.yaml  requirements.txt
apps/app_colette/: README.md  create_app.json  index_app.json  query_app.json  reindex_app.json
apps/coder/: README.md  create_coder.sh  send_msg.sh
docker/: Dockerfile  cpu_build.Dockerfile  cpu_server.Dockerfile  entrypoint.sh  gpu_build.Dockerfile  gpu_jb_server.Dockerfile  gpu_server.Dockerfile  ui.Dockerfile
docs/: README.md
docs/source/: conf.py  conversational.md  faq.md  index.rst  openapi.json  server_and_api.rst  tutorial_website.md
docs/source/api/: api.rst
docs/source/api/_autosummary/: apidata.APIData.rst  apidata.APIResponse.rst
docs/source/developers/: deployment.md  setup.md
docs/source/users/: configuration.md  data.md  get_started.md  openwebui.md  ui.md
server/: run.sh  run_openwebui.sh
src/colette/: README.md  apidata.py  apistrategy.py  colette_cli.py  httpjsonapi.py  inputconnector.py  jsonapi.py  kvstore.py  llmlib.py  llmmodel.py  llmservice.py  logger.py  openwebuiapi.py  outputconnector.py  services.py
src/colette/backends/coldb/: __init__.py  coldb.py  collection.py  embedder.py  indexer.py  parameters.py  redefines.py  retriever.py  searcher.py
src/colette/backends/coldb/indexing/: collection_encoder.py  collection_indexer.py  index_manager.py  index_saver.py  loaders.py  utils.py
src/colette/backends/coldb/infra/: __init__.py  launcher.py  run.py
src/colette/backends/coldb/modeling/: base_colbert.py  checkpoint.py  colbert.py  hf_colbert.py
src/colette/backends/coldb/search/: candidate_generation.py  index_loader.py  index_storage.py  strided_tensor.py  strided_tensor_core.py
src/colette/backends/coldb/utils/: amp.py  distributed.py  (+3 more)
src/colette/backends/diffusr/: diffusrlib.py  diffusrmodel.py
src/colette/backends/hf/: hfinputconn.py  hflib.py  hfmodel.py  hfoutputconn.py  layout_detector.py  model_cache.py  preprocessing.py  query_rephraser.py  session_cache.py  vllm_client.py  word_detector.py
src/colette/backends/langchain/: langchaininputconn.py  langchainlib.py  langchainmodel.py  langchainoutputconn.py
src/colette/config/: coder_default.json  diffusr_default.json  message_example.json  trag_default.json  vrag_default.json  vrag_default_index.json
src/colette/ui/: app.py
src/colette/ui/assets/: translation.yaml
src/colette/ui/utils/: api.py  config.py  listeners.py  logger.py  namesgenerator.py
tests/: test_base.py  test_base_ci.py  test_base_img.py  test_base_img_reindex.py  test_cli.py  test_colbert.py  test_coldb.py  test_configs.py  test_diffusr.py  test_evaluation.py  test_external_vllm.py  test_logging_payload.py  test_multiple_creation.py  test_preprocessing.py  test_upload.py  utils.py
tests/data/: RAPPANR5L16B1991.docx  RAPPANR5L16B1991.html
tools/: 3c644e69-3937-4c59-928d-6711eb6ad27b-08_crop_1.txt  README.md  benchmark_retriever.py  calibrate_vllm_ocr.py  evaluation.py  kvtool.py
tools/dse/qwen2/: README.md  arguments.py  collator.py  custom_dataset.py  dse.py  encoder.py  fix_paths.py  generate_dataset.py  launch_custom.sh  train.py  trainer.py
tools/dse/qwen25/: README.md  collator.py  dataset.py  dse.py  encode.py  launch.sh  train.py  trainer.py
(+18 files in other folders)
